fix: footer gap

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,6 +1,7 @@
 .footer {
     width: 100%;
     padding: 3rem 0;
+    margin-top: 1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
